--- a/includes/thesis/part01-page4-abstract.tex
+++ b/includes/thesis/part01-page4-abstract.tex
@@ -12,11 +12,16 @@
 \AbstractHead{Abstract}
 \noindent
 \normalsize
-\textbf{Introduction:} Anatomical segmentation is a common task in microscopic computed tomography (\mct) studies. Segmentation quality and accuracy strongly depends on the tools chosen and operator experience. Therefore, it is important to educate newcomers to the field in the basics of \mct\space segmentation.\\
-\textbf{Purpose:} Comparing segmentation performance of different operators before and after offering them a guide to reference with the goal of answering the research question, whether the usage of a segmentation guide improves segmentation quality when used by inexperienced operators.\\
-\textbf{Method:} First, a ground truth segmentation was created by the author. Secondly, a guide explaining \mct\space segmentation with \textit{3D Slicer} has been created. Third, testers were tasked with segmenting three bones on a mouse \mct\space scan. Then they were tasked with reading the guide and repeat their segmentation on the contralateral anatomical structures. The resulting segmentations were compared to the ground truth using the \acrfull{hd} and \acrfull{dc}.\\
-\textbf{Results:} Seven testers did six segmentations each. 85.71\% of users improved their segmentations after reading the guide and 81\% of segmentations displayed better agreement with the ground truth.\\
-\textbf{Conclusion:} Due to the small sample size, the research question cannot be answered definitively. However, the results imply significant improvements if the study were to be repeated at a larger scale.\\
+%\textbf{Introduction:}
+Anatomical segmentation is a common task in microscopic computed tomography (\mct) studies. Segmentation quality and accuracy strongly depends on the tools chosen and operator experience. Therefore, it is important to educate newcomers to the field in the basics of \mct\space segmentation. %\\
+%\textbf{Purpose:}
+Comparing segmentation performance of different operators before and after offering them a guide to reference with the goal of answering the research question, whether the usage of a segmentation guide improves segmentation quality when used by inexperienced operators. %\\
+%\textbf{Method:}
+First, a ground truth segmentation was created by the author. Secondly, a guide explaining \mct\space segmentation with \textit{3D Slicer} has been created. Third, testers were tasked with segmenting three bones on a mouse \mct\space scan. Then they were tasked with reading the guide and repeat their segmentation on the contralateral anatomical structures. The resulting segmentations were compared to the ground truth using the \acrfull{hd} and \acrfull{dc}. %\\
+%\textbf{Results:}
+Seven testers did six segmentations each. 85.71\% of users improved their segmentations after reading the guide and 81\% of segmentations displayed better agreement with the ground truth. %\\
+%\textbf{Conclusion:}
+Due to the small sample size, the research question cannot be answered definitively. However, the results imply significant improvements if the study were to be repeated at a larger scale. \\
 \SomeSpace
 \newline
 \noindent
